apps/c2c/redis/redis-insight/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-insight
  namespace: c2c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-insight
  template:
    metadata:
      labels:
        app: redis-insight
    spec:
      containers:
      - name: redis-insight
        image: redis/redisinsight:latest
        ports:
        - containerPort: 5540
          name: http
        resources:
          requests:
            cpu: 300m
            memory: 1Gi
          limits:
            cpu: "1"
            memory: 2Gi
