apps/c2c/redis/redis-insight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-insight
  namespace: c2c
spec:
  type: ClusterIP
  selector:
    app: redis-insight
  ports:
  - name: http
    port: 5540
    targetPort: 5540
